--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:id="@+id/btAddTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="10dp"
         android:text="Add task"
         app:layout_constraintBottom_toTopOf="@+id/etTodoInput"
         app:layout_constraintEnd_toStartOf="@+id/btFinishTask" />
@@ -28,6 +28,7 @@
         android:id="@+id/btFinishTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
         android:text="Finish task"
         app:layout_constraintBottom_toTopOf="@+id/etTodoInput"
         app:layout_constraintEnd_toEndOf="parent" />
